--- a/index.html
+++ b/index.html
@@ -16,77 +16,115 @@
         .card {
             background: white;
             width: 70%;
-            margin: 60px auto;
+            margin: 60px auto 40px;
             padding: 40px;
             border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
         }
 
         h1 {
             color: #ff4da6;
             font-size: 32px;
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            color: #ff4da6;
+            font-size: 28px;
         }
 
         p {
             font-size: 18px;
             color: #444;
+            line-height: 1.6;
         }
 
-        .button {
-            display: inline-block;
-            margin-top: 25px;
-            padding: 12px 25px;
-            background: #ff4da6;
-            color: white;
-            font-size: 18px;
-            text-decoration: none;
-            border-radius: 25px;
-            transition: 0.2s;
-        }
-
-        .button:hover {
-            background: #ff1a8c;
-        }
-
-        /* PHẦN GIỚI THIỆU */
-        #about {
-            margin-top: 80px;
+        .section {
             background: white;
-            padding: 40px;
             width: 70%;
-            margin-left: auto;
-            margin-right: auto;
+            margin: 40px auto;
+            padding: 35px;
             border-radius: 20px;
-            box-shadow: 0 8px 20px rgba(0,0,0,0.1);
+            box-shadow: 0 8px 20px rgba(0,0,0,0.08);
+            text-align: left;
         }
 
-        #about h2 {
-            color: #ff4da6;
+        .project {
+            background: #ffe2f1;
+            padding: 20px;
+            border-radius: 15px;
+            margin-top: 20px;
+        }
+
+        .project-title {
+            font-size: 20px;
+            color: #ff1a8c;
+            margin-bottom: 5px;
+            font-weight: bold;
+        }
+
+        .project-desc {
+            color: #444;
         }
     </style>
 </head>
 
 <body>
 
-    <!-- KHỐI WELCOME -->
+    <!-- CHÀO MỪNG -->
     <div class="card">
         <h1>🌸 Chào mừng đến website của Linh 🌸</h1>
-        <p>Đây là trang web cá nhân của mình.<br>
-        Mình đang học HTML và GitHub Pages để làm web đẹp hơn ✨.</p>
-
-        <!-- NÚT KÉO XUỐNG -->
-        <a class="button" href="#about">Nhấn vào đây nè 💗</a>
+        <p>
+            Đây là trang web cá nhân của mình.<br>
+            Mình đang phát triển nó từng chút một để trở nên đẹp và chuyên nghiệp hơn ✨.
+        </p>
     </div>
 
-    <!-- KHỐI GIỚI THIỆU -->
-    <div id="about">
-        <h2>🌼 Giới thiệu về Linh</h2>
+    <!-- GIỚI THIỆU CHI TIẾT -->
+    <div class="section">
+        <h2>🌼 Giới thiệu về mình</h2>
         <p>
-            Mình là <b>Nguyễn Phương Linh</b> 🌸.<br>
-            Hiện tại mình là <b>sinh viên năm 2 ngành Kinh Tế</b>.<br>
-            Mình thích lập trình, thiết kế và khám phá những điều mới ✨.<br>
-            Đây là nơi mình lưu lại hành trình học tập và phát triển bản thân.
+            Xin chào, mình là <b>Nguyễn Phương Linh</b> 🌸.<br><br>
+
+            Mình hiện là <b>sinh viên năm 2 ngành Kinh Tế</b>.  
+            Ngoài việc học, mình rất thích:  
+            • Thiết kế giao diện 🎨  
+            • Học lập trình web 💻  
+            • Làm portfolio cá nhân ✨  
+            • Viết note và làm tài liệu đẹp 📘  
+            • Nghe nhạc nhẹ 🎵  
+            <br><br>
+            Mình tạo website này để ghi lại hành trình học tập, làm dự án
+            và chia sẻ những gì mình đang cố gắng phát triển mỗi ngày.
         </p>
+    </div>
+
+    <!-- DỰ ÁN -->
+    <div class="section">
+        <h2>💗 Một vài dự án mình đã làm</h2>
+
+        <div class="project">
+            <div class="project-title">📌 1. Website Portfolio cá nhân</div>
+            <div class="project-desc">
+                Trang web hồ sơ cá nhân được xây bằng HTML + CSS cơ bản.
+                Đây là dự án giúp mình học GitHub Pages và quản lý code.
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 2. Mini App: Máy tính cộng – trừ – nhân – chia</div>
+            <div class="project-desc">
+                Một ứng dụng nhỏ dùng JavaScript để luyện tư duy lập trình.
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 3. Trang web bài học ghi chú (Study Notes)</div>
+            <div class="project-desc">
+                Giao diện dễ thương dùng để lưu lại các ghi chú bài học, template pastel do mình tự thiết kế.
+            </div>
+        </div>
+
     </div>
 
 </body>
