--- a/index.html
+++ b/index.html
@@ -43,6 +43,16 @@
             line-height: 1.6;
         }
 
+        /* ẢNH PROFILE */
+        .profile-img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid #ff9ac6;
+            margin-bottom: 20px;
+        }
+
         .section {
             background: white;
             width: 70%;
@@ -84,6 +94,10 @@
 
     <!-- CHÀO MỪNG -->
     <div class="card">
+
+        <!-- ẢNH PROFILE CHÓ CUTE -->
+        <img class="profile-img" src="https://i.imgur.com/Hh8xQ8b.jpeg" alt="ảnh chó cute">
+
         <h1>🌸 Chào mừng đến website của Linh 🌸</h1>
         <p>
             Đây là trang web cá nhân của mình.<br>
@@ -112,15 +126,14 @@
 
     <!-- DỰ ÁN -->
     <div class="section">
-        <h2>💗 Một vài dự án mình đã làm</h2>
+        <h2>💗 Những dự án mình đã làm</h2>
 
         <!-- PROJECT 1 -->
         <a href="project1.html">
             <div class="project">
                 <div class="project-title">📌 1. Website Portfolio cá nhân</div>
                 <div class="project-desc">
-                    Trang web hồ sơ cá nhân được xây bằng HTML + CSS cơ bản.  
-                    Đây là dự án giúp mình học GitHub Pages và quản lý code.
+                    Trang web hồ sơ cá nhân được xây bằng HTML + CSS cơ bản.
                 </div>
             </div>
         </a>
@@ -128,9 +141,9 @@
         <!-- PROJECT 2 -->
         <a href="project2.html">
             <div class="project">
-                <div class="project-title">📌 2. Mini App: Máy tính cộng – trừ – nhân – chia</div>
+                <div class="project-title">📌 2. Mini App: Máy tính cơ bản</div>
                 <div class="project-desc">
-                    Một ứng dụng nhỏ dùng JavaScript để luyện tư duy lập trình.
+                    Ứng dụng dùng JavaScript để tính toán nhanh.
                 </div>
             </div>
         </a>
@@ -138,13 +151,64 @@
         <!-- PROJECT 3 -->
         <a href="project3.html">
             <div class="project">
-                <div class="project-title">📌 3. Trang web bài học ghi chú (Study Notes)</div>
+                <div class="project-title">📌 3. Website ghi chú pastel</div>
                 <div class="project-desc">
-                    Giao diện dễ thương dùng để lưu lại các ghi chú bài học,
-                    template pastel do mình tự thiết kế.
+                    Giao diện cute dùng để lưu note học tập.
                 </div>
             </div>
         </a>
+
+        <!-- ⭐ 10 PROJECT MỚI BỔ SUNG ⭐ -->
+
+        <div class="project">
+            <div class="project-title">📌 4. To-do List App</div>
+            <div class="project-desc">Ứng dụng quản lý việc cần làm với giao diện pastel.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 5. Random Quote Generator</div>
+            <div class="project-desc">Hiển thị câu nói truyền cảm hứng mỗi lần bấm nút.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 6. Flashcard Học Từ Vựng</div>
+            <div class="project-desc">Ứng dụng giúp học từ vựng theo dạng lật thẻ.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 7. Trang Blog Mini</div>
+            <div class="project-desc">Blog cá nhân chia sẻ mẹo học tập và cuộc sống.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 8. App Chọn Màu Pastel</div>
+            <div class="project-desc">Hiển thị mã màu pastel dễ thương để dùng cho thiết kế.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 9. Bộ đếm bước chân (giả lập)</div>
+            <div class="project-desc">App mô phỏng đếm bước chân cho mục tiêu mỗi ngày.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 10. Website Recipe Công Thức Nấu Ăn</div>
+            <div class="project-desc">Lưu lại các món ăn yêu thích để xem nhanh.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 11. App Chọn Nhạc Mood</div>
+            <div class="project-desc">App gợi ý playlist phù hợp với tâm trạng.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 12. App Random Outfit</div>
+            <div class="project-desc">Gợi ý outfit cute mỗi ngày từ danh sách preset.</div>
+        </div>
+
+        <div class="project">
+            <div class="project-title">📌 13. Profile Card Animation</div>
+            <div class="project-desc">Thẻ profile có hiệu ứng hover rất mượt và đẹp.</div>
+        </div>
 
     </div>
 
